--- a/ipaddr/blueprints/webui/templates/clients.html
+++ b/ipaddr/blueprints/webui/templates/clients.html
@@ -1,50 +1,156 @@
 {% extends "base.html" %}
 {% block title %}Clients{% endblock %}
 {% block content%}
-<h1>Add clients</h1>
-<form method="POST">
-    <div class="form-group row">
-        <label for="ipaddress" class="col-sm-2 col-form-label">IP address</label>
-        <div class="col-sm-10">
-            <input type="text" class="form-control" id="ipaddress" name="ipaddress" placeholder="Enter client IP address" />
-        </div>
-    </div>
-    <div class="form-group row">
-        <label for="description" class="col-sm-2 col-form-label">Description</label>
-        <div class="col-sm-10">
-            <input type="text" class="form-control" id="description" name="description"
-            placeholder="Enter client description" />
-        </div>
-    </div>
-    <div class="form-group row">
-        <div class="col-sm-10">
-            <div class="col-sm-10">
-                <button type="submit" class="btn btn-primary">Add Client IP address</button>
-            </div>    
-        </div>
-    </div>
-</form>
 
-<h3>Authorized clients</h3>
-<table class="table table-hover">
-    <thead class="thead-light">
-        <tr>
-            <th scope="col">IP address</th>
-            <th scope="col">Description</th>
-            <th scope="col">Action</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for client in clients %}
-        <tr>
-            <td>{{ client.ipaddress }}</td>
-            <td>{{ client.description }}</td>
-            <td>
-                <a class="btn btn-danger" href='#' onClick="deleteClient('{{ client.ipaddress }}')">
-                    <i class="bi bi-trash"></i>Delete</a>
-            </td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+<div class="container">
+    <div class="row">
+        <div class="col md-12">
+            <div class="jumbotrom p-3">
+                <h2>Manage Clients IP <button type="button" class="btn btn-success btn-sm float-right"
+                    data-toggle="modal" data-target="#modaladd">Add Client IP</button></h2>
+
+                    {% with messages = get_flashed_messages(with_categories=true) %}
+                    {% if messages %}
+                        {% for category, message in messages %}
+                            {% if category == 'error' %}
+                                <div class="alert alert-danger alter-dismissable fade show" role="alert">
+                                    {{ message }}
+                                    <button type="button" class="close" data-dismiss="alert">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                            {% elif category == 'warning' %}
+                                <div class="alert alert-warning alter-dismissable fade show" role="alert">
+                                    {{ message }}
+                                    <button type="button" class="close" data-dismiss="alert">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                            {% else %}
+                                <div class="alert alert-success alter-dismissable fade show" role="alert">
+                                    {{ message }}
+                                    <button type="button" class="close" data-dismiss="alert">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                            {% endif %}
+                        {% endfor %}
+                    {% endif %}
+                {% endwith %}
+
+                <table class="table table-hover">
+                    <thead class="thead-light">
+                        <tr>
+                            <th scope="col">ID</th>
+                            <th scope="col">IP address</th>
+                            <th scope="col">Description</th>
+                            <th scope="col">Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for client in clients %}
+                        <tr>
+                            <td>{{ client.client_id }}</td>
+                            <td>{{ client.ipaddress }}</td>
+                            <td>{{ client.description }}</td>
+                            <td>
+                                <a class="btn btn-danger btn-sm"
+                                    data-toggle="modal" href="#" data-target="#modaldelete{{ client.client_id }}">Delete</a>
+                                </a>
+                            </td>
+
+                        </tr>
+
+
+                        <!-- Modal Add -->
+                        <div class="modal fade" id="modaladd" role="dialog">
+                            <div class="modal-dialog modal-dialog-centered modal-lg">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title">Add Client IP</h5>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form action="{{ url_for('webui.clients') }}" method="POST">
+                                            <div class="form-group row">
+                                                <label for="ipaddress" class="col-sm-2 col-form-label">IP address</label>
+                                                <div class="col-sm-10">
+                                                    <input type="text" class="form-control" id="ipaddress"
+                                                        name="ipaddress" placeholder="Enter client IP address"
+                                                        required="1"
+                                                    />
+                                                </div>
+                                            </div>
+                                            <div class="form-group row">
+                                                <label for="description" class="col-sm-2 col-form-label">Description</label>
+                                                <div class="col-sm-10">
+                                                    <input type="text" class="form-control" id="description"
+                                                        name="description" placeholder="Enter client description"
+                                                        required="1"
+                                                    />
+                                                </div>
+                                            </div>
+                                            <button type="submit" class="btn btn-primary btn-sm float-right">Add Client IP</button>
+                                        </form>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                                               
+                        <!-- Modal Delete -->
+                        <div class="modal fade" id="modaldelete{{ client.client_id }}" role="dialog">
+                            <div class="modal-dialog modal-dialog-centered modal-lg">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title">Delete Client IP</h5>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form action="{{ url_for('webui.clientdel') }}" method="POST">
+                                            <div class="form-group row">
+                                                <label for="client_id" class="col-sm-2 col-form-label">id</label>
+                                                <div class="col-sm-10">
+                                                    <input type="text" class="form-control" id="client_id"
+                                                    name="client_id" value="{{ client.client_id }}" readonly
+                                                    />
+                                                </div>
+                                            </div>
+                                            <div class="form-group row">
+                                                <label for="ipaddress" class="col-sm-2 col-form-label">IP address</label>
+                                                <div class="col-sm-10">
+                                                    <input type="text" class="form-control" id="ipaddress"
+                                                    name="ipaddress" value="{{ client.ipaddress }}" readonly
+                                                    />
+                                                </div>
+                                            </div>
+                                            <div class="form-group row">
+                                                <label for="description" class="col-sm-2 col-form-label">Description</label>
+                                                <div class="col-sm-10">
+                                                    <input type="text" class="form-control" id="description"
+                                                    name="description" value="{{ client.description }}" readonly
+                                                    />
+                                                </div>
+                                            </div>
+                                            <button type="submit" class="btn btn-primary">Delete</button>
+                                        </form>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        {% endfor %}
+
+
+                    </tbody>
+                </table>
+
+
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
