Add activity to webui

--- a/ipaddr/blueprints/webui/templates/base.html
+++ b/ipaddr/blueprints/webui/templates/base.html
@@ -41,7 +41,7 @@
                         {% endif %}
                     </div>
                 </ul>
-                <span class="navbar-text">{{ user.username }} | version {{ ver }}</span>
+                <span class="navbar-text"><i class="fas fa-user mx-1"></i> {{ user.username }} | version {{ ver }}</span>
             </div>
         </nav>
 
